--- a/restourant/docker-compose.yaml
+++ b/restourant/docker-compose.yaml
@@ -3,15 +3,20 @@ version: '3.7'
 services:
   db:
     image: postgres:14.5
+    ports:
+      - "5432:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data/14/
+      - postgres_data:/var/lib/postgresql/data/
+    restart: always
     env_file:
       - ./.env
 
   web:
     build: .
     restart: always
-    command: gunicorn restourant.wsgi:application --bind 0.0.0.0:8000
+    command: >
+      sh -c "python manage.py migrate &&
+             gunicorn restourant.wsgi:application --bind 0.0.0.0:8000"
     ports:
       - "8000:8000"
     depends_on:
@@ -25,6 +30,7 @@ services:
       - "80:80"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    restart: always
     depends_on:
       - web
 
