--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,55 @@
 appdirs==1.4.4
 asgiref==3.5.2
+astroid==2.12.4
 attrs==22.1.0
+black==22.6.0
 cattrs==22.1.0
 certifi==2022.6.15
+cfgv==3.3.1
 charset-normalizer==2.1.1
+click==8.1.3
+dill==0.3.5.1
+distlib==0.3.6
 Django==4.1
 django-filter==22.1
 djangorestframework==3.13.1
 exceptiongroup==1.0.0rc8
+filelock==3.8.0
+flake8==5.0.4
 gunicorn==20.1.0
+identify==2.5.3
 idna==3.3
+isort==5.10.1
+lazy-object-proxy==1.7.1
+mccabe==0.7.0
+mypy-extensions==0.4.3
+nodeenv==1.7.0
+numpy==1.23.2
+pandas==1.4.3
+pathspec==0.9.0
+platformdirs==2.5.2
+pre-commit==2.20.0
 psycopg2-binary==2.9.3
+pycodestyle==2.9.1
+pydantic==1.10.1
+pyflakes==2.5.0
+pylint==2.15.0
+pylint-django==2.5.3
+pylint-plugin-utils==0.7
+python-dateutil==2.8.2
 python-dotenv==0.20.0
 pytz==2022.2.1
+PyYAML==6.0
 requests==2.28.1
 requests-cache==0.9.6
 six==1.16.0
 sqlparse==0.4.2
+toml==0.10.2
+tomli==2.0.1
+tomlkit==0.11.4
 tqdm==4.64.0
+typing_extensions==4.3.0
 url-normalize==1.4.3
 urllib3==1.26.12
-python-dateutil==2.8.2
-numpy==1.23.2
-pandas==1.4.3
+virtualenv==20.16.3
+wrapt==1.14.1
